--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-*{
+*{ 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -451,7 +451,7 @@ section .our-team-con{
 
 /* Offer Section */
 #offer-section{
-    background: linear-gradient(to bottom,#FFFFFF, #D5E7FF, #D5E7FF,#FFFFFF );
+    background: linear-gradient(to bottom,#FFFFFF,#FFFFFF, #D5E7FF, #D5E7FF,#FFFFFF );
 }
 .gif-im{
     display: none;
@@ -1141,6 +1141,8 @@ span{
     background-size: 65%;
     height: 100vh;
     width: 100%;
+    background-blend-mode: multiply;
+    background-color: white;
     position: fixed;
     z-index: 9999999;
     overflow-x: hidden;  
