--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,6 +224,28 @@ header{
 
 /* Hero section */
 .hero-section{
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    background-color: #004882;
+}
+.hero-section img{
+    height: 100%;
+    width: 100%;
+}
+
+.hero-section-background{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* .hero-section{
     background: url('./hero-bg2.jpg') no-repeat center center fixed;
     background-size: cover;
     height: 620px;
@@ -233,21 +255,19 @@ header{
     max-width: 100%;
     position: relative;
     background: rgba(17, 17, 18, 0.7);
-    -webkit-transform: translateZ(0); 
-    will-change: transform, opacity;
-    -webkit-backface-visibility: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
+
 .hero-section-background .div{
-    /* background-color: rgba(17, 17, 18, 0.7); */
     max-width: 700px;
     color: var(--color-headerBg);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* margin-top: 4rem; */
 }
 
 .hero-section-background .div p{
